--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@urql/exchange-graphcache": "^4.3.4",
+    "cloudinary-react": "^1.7.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.0.3",
     "graphql": "^15.5.3",
     "next": "^12.0.3",
     "next-urql": "^3.2.1",
     "react": "^17.0.2",
+    "react-cloudinary-upload-widget": "^1.4.3",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "urql": "^2.0.4"
