--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -17,15 +17,20 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@urql/exchange-graphcache": "^4.3.6",
+    "assert": "^2.0.0",
     "axios": "^0.26.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "dotenv-safe": "^8.2.0",
     "formik": "^2.2.9",
     "framer-motion": "^6",
     "graphql": "^16.3.0",
     "hashids": "^2.2.10",
     "lodash.debounce": "^4.0.8",
+    "match-sorter": "^6.3.1",
+    "process": "^0.11.10",
     "react": "^17.0.2",
-    "react-cookie": "^4.1.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-hours": "^1.0.1",
     "react-icons": "^4.3.1",
@@ -34,9 +39,13 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
+    "react-to-pdf": "0.0.8",
+    "react-to-print": "^2.14.7",
     "recoil": "^0.7.2",
+    "stream-browserify": "^3.0.0",
     "typescript": "^4.6.2",
     "urql": "^2.1.3",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -44,9 +53,9 @@
     "@graphql-codegen/typescript": "^2.4.5",
     "@graphql-codegen/typescript-operations": "^2.3.2",
     "@graphql-codegen/typescript-urql": "^3.5.3",
-    "@types/react": "^17.0.39",
+    "@types/react": "^17.0.40",
     "eslint": "8.9.0",
-    "typescript": "^4.4.3"
+    "typescript": "^4.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
