--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -9,8 +9,8 @@
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
@@ -42,6 +42,8 @@
     "react-to-pdf": "0.0.8",
     "react-to-print": "^2.14.7",
     "recoil": "^0.7.2",
+    "slate": "^0.78.0",
+    "slate-react": "^0.79.0",
     "stream-browserify": "^3.0.0",
     "typescript": "^4.6.2",
     "urql": "^2.1.3",
@@ -54,7 +56,9 @@
     "@graphql-codegen/typescript-operations": "^2.3.2",
     "@graphql-codegen/typescript-urql": "^3.5.3",
     "@types/react": "^17.0.40",
+    "cypress": "^9.7.0",
     "eslint": "8.9.0",
+    "msw": "^0.41.1",
     "typescript": "^4.6.2"
   },
   "scripts": {
