--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,8 @@ jobs:
     executor: node/default
     steps:
       - checkout
-      - run:
-          command: cd react-frontend
       - node/install-packages:
+          app-dir: ~/project/hilger_admin_react/react-frontend
           pkg-manager: yarn
       - run:
           command: yarn build
