--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
           app-dir: ~/project/hilger_admin_react/react-frontend
           pkg-manager: yarn
       - run:
+          app-dir: ~/project/hilger_admin_react/react-frontend
           command: yarn build
           name: Build app
       - persist_to_workspace:
