--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,10 @@ jobs:
     steps:
       - checkout
       - node/install-packages:
-          app-dir: ~/project/hilger_admin_react/react-frontend
-          override:
-            - cd react-frontend; yarn install
-            - cd react-frontend; yarn build
+          pkg-manager: yarn
+      - run:
+          command: yarn build
+          name: Build app
       - persist_to_workspace:
           root: ~/project
           paths: 
@@ -25,7 +25,7 @@ jobs:
       - run:
           name: Deploy Over SSH
           command: |
-            scp -P25052 -r * $SSH_USER@$SSH_HOST:/home/murph/portal.hhlearning.com
+            scp -P8202 -r * $SSH_USER@$SSH_HOST:/home/murphy/hilger_keystone
 workflows:
   version: 2
   build-and-deploy:
