--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,31 +9,31 @@ jobs:
       - checkout
       - node/install-packages:
           pkg-manager: yarn
-      - run:
-          command: cd react-frontend && yarn build
-          name: Build app
-      - persist_to_workspace:
-          root: ~/project
-          paths: 
-            - .
-  deploy:
-    machine:
-      enabled: true
-    steps:
-      - attach_workspace:
-          at: ~/project
-      - run:
-          name: Deploy Over SSH
-          command: |
-            scp -P8202 -r * $SSH_USER@$SSH_HOST:/home/murphy/hilger_keystone
+      # - run:
+      #     command: cd react-frontend && yarn build
+      #     name: Build app
+      # - persist_to_workspace:
+      #     root: ~/project
+      #     paths: 
+      #       - .
+  # deploy:
+  #   machine:
+  #     enabled: true
+  #   steps:
+  #     - attach_workspace:
+  #         at: ~/project
+  #     - run:
+  #         name: Deploy Over SSH
+  #         command: |
+  #           scp -P8202 -r * $SSH_USER@$SSH_HOST:/home/murphy/hilger_keystone
 workflows:
   version: 2
   build-and-deploy:
     jobs:
       - build
-      - deploy:
-          requires:
-            - build # only deploy once build job has completed
-          filters:
-            branches:
-              only: master # only deploy on the main branch
+      # - deploy:
+      #     requires:
+      #       - build # only deploy once build job has completed
+      #     filters:
+      #       branches:
+      #         only: master # only deploy on the main branch
