--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - run:
           name: Deploy Over SSH
           command: |
-            scp -P25052 -r * $SSH_USER@$SSH_HOST:/home/murph/portal.hhlearning.com/
+            scp -P25052 -r ~/project/hilger_admin_react/react-frontend/build/* $SSH_USER@$SSH_HOST:/home/murph/portal.hhlearning.com/
 workflows:
   version: 2
   build-and-deploy:
