--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           pkg-manager: yarn
           app-dir: ~/project/hilger_admin_react/react-frontend
       - run:
-          command: cd react-frontend && REACT_APP_SALT='7CQxaV8ksmBBKNKKytddNRuKUk3C0S' REACT_APP_SALT_LENGTH=5 yarn build
+          command: cd react-frontend && REACT_APP_SALT=$REACT_APP_SALT REACT_APP_SALT_LENGTH=$REACT_APP_SALT_LENGTH yarn build
           name: Build app
       - persist_to_workspace:
           root: ~/project
@@ -27,7 +27,7 @@ jobs:
           name: Deploy Over SSH
           command: |
             sed -i 's/React App/Hilger Portal/' ~/project/hilger_admin_react/react-frontend/build/index.html &&
-            scp -P25052 -r ~/project/hilger_admin_react/react-frontend/build/* $SSH_USER@$SSH_HOST:/home/murph/portal.hhlearning.com/
+            scp -P$SSH_PORT -r ~/project/hilger_admin_react/react-frontend/build/* $SSH_USER@$SSH_HOST:/home/murph/portal.hhlearning.com/
 workflows:
   version: 2
   build-and-deploy:
